(auth): Implementado fluxo completo de autenticação com Spring Security e JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,17 @@ spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 
 cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
+
+# MEU CHAVEIRO
+# CHAVE DE ASSINATURA DOS TOKENS JWT
+jwt.secret= MINHA_CHAVE_SECRETA_SUPER_LONGA_E_SEGURA_DE_2025
+
+# --- Configurações do H2 Console ---
+# Permite que o console do H2 seja acessado via navegador
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+
+# Desabilita o rastreamento (ajuda a evitar alguns problemas de conexão)
+spring.h2.console.settings.trace=false
+
